# zauri

./: .gitignore  CLAUDE.md  ROADMAP.md  TODO.md  ZAURI_CONTEXT.md  index.html  package.json
.github/workflows/: release.yml
src/: about.ts  ai-edits.ts  ai-panel.ts  command-palette.ts  context-menu.ts  diff-decorations.ts  fuzzy.ts  git.ts  icons.ts  languages.ts  lsp-client.ts  main.ts  minimap.ts  preview.ts  projects.ts  quick-open.ts  settings.ts  shortcuts.ts  styles.css  terminal.ts  updater.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lsp.rs  main.rs
zig-backend/: build.zig
zig-backend/src/: main.zig  zauri_backend.h
