[package]
name = "zauri"
version = "0.1.0"
description = "A lightweight code editor built with Tauri + Zig"
authors = ["you"]
edition = "2021"

[lib]
name = "zauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
